# mayastor-control-plane

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Jenkinsfile  README.md  a.txt  bors.toml  commitlint.config.js  default.nix  docker-compose.yaml  shell.nix
common/: Cargo.toml  build.rs
common/src/: constants.rs  lib.rs  opentelemetry.rs
common/src/mbus_api/: mbus_nats.rs  mod.rs  receive.rs  send.rs  v0.rs
common/src/platform/: mod.rs
common/src/store/: README.md  etcd.rs  etcd_keep_alive.rs  mod.rs
common/src/transport_api/: macros.rs  mod.rs  v0.rs
common/src/types/: mod.rs
composer/: Cargo.toml
composer/src/: lib.rs
control-plane/agents/: Cargo.toml
control-plane/agents/src/: lib.rs
control-plane/csi-controller/: Cargo.toml
control-plane/csi-controller/src/: client.rs  controller.rs  identity.rs  main.rs  server.rs
control-plane/csi-driver/: Cargo.toml  build.rs
control-plane/csi-driver/src/: client.rs  context.rs  filesystem.rs  lib.rs  limiter.rs  node.rs  plugin_capabilities.rs
control-plane/deployer/: Cargo.toml
control-plane/deployer/src/: lib.rs
control-plane/grpc/: Cargo.toml  build.rs
control-plane/grpc/src/: client.rs  context.rs  lib.rs  tracing.rs
control-plane/msp-operator/: Cargo.toml
control-plane/msp-operator/src/: main.rs
control-plane/plugin/: Cargo.toml  README.md
control-plane/plugin/src/: lib.rs  operations.rs  rest_wrapper.rs
control-plane/pstor-proxy/: Cargo.toml  build.rs
control-plane/pstor-proxy/src/: lib.rs
control-plane/rest/: Cargo.toml
control-plane/rest/authentication/: README.md
control-plane/rest/openapi-specs/: v0_api_spec.json  v0_api_spec.yaml
control-plane/rest/src/: lib.rs
control-plane/rest/tests/: v0_test.rs
control-plane/stor-port/: Cargo.toml
control-plane/stor-port/src/: lib.rs
control-plane/store/: Cargo.toml
control-plane/store/src/: etcd.rs  kv_store.rs  lib.rs  store.rs
control-plane/store/tests/: etcd.rs
control-plane/types/: Cargo.toml
deployer/: Cargo.toml  README.md
deployer/misc/: jaeger_entrypoint_elastic.sh  kibana_jaeger.ndjson  otel_agent_config.yaml  setup_kibana_jaeger_index.sh
deployer/src/: lib.rs
deployer/src/infra/: cluster_agent.rs  core.rs  csi.rs  csi_controller.rs  csi_node.rs  dns.rs  elastic.rs  empty.rs  etcd.rs  fio_spdk.rs  hanodeagent.rs  io_engine.rs  jaeger.rs  jsongrpc.rs  kibana.rs  mayastor.rs  mod.rs  nats.rs  rest.rs
k8s/forward/: Cargo.toml
k8s/forward/examples/: http-forward.rs  port-forward.rs
k8s/forward/src/: http_forward.rs  lib.rs  port_forward.rs
k8s/operators/: Cargo.toml
k8s/operators/src/: lib.rs
k8s/plugin/: Cargo.toml  README.md
k8s/plugin/src/: lib.rs  main.rs
k8s/proxy/: Cargo.toml
k8s/proxy/examples/: http-forward.rs  port-forward.rs
k8s/proxy/src/: http_forward.rs  lib.rs  port_forward.rs  proxy.rs
k8s/supportability/: Cargo.toml
k8s/supportability-tool/: Cargo.toml  README.md
k8s/supportability-tool/src/: main.rs  operations.rs
k8s/supportability/src/: lib.rs  operations.rs
kubectl-plugin/: Cargo.toml  README.md
kubectl-plugin/src/: main.rs  operations.rs  rest_client.rs  rest_wrapper.rs
kubectl-plugin/src/resources/: mod.rs  node.rs  pool.rs  tests.rs  utils.rs  volume.rs
openapi/: Cargo.toml  README.md  build.rs
openapi/api/: openapi.yaml
openapi/docs/: BlockDevice.md  BlockDevicesApi.md  ChildState.md  ChildrenApi.md  CreatePoolBody.md  CreateReplicaBody.md  JsonGrpcApi.md  LabelledTopology.md  NexusesApi.md  NodeState.md  NodeTopology.md  NodesApi.md  PoolSpec.md  PoolsApi.md  ReplicaShareProtocol.md  ReplicaSpecOperation.md  ReplicasApi.md  RestWatch.md  SpecsApi.md  VolumeShareProtocol.md  VolumesApi.md  WatchesApi.md
openapi/docs/apis/: BlockDevices.md  Children.md  JsonGrpc.md  Nexuses.md  Nodes.md  Pools.md  Replicas.md  Specs.md  Volumes.md  Watches.md
openapi/docs/models/: BlockDeviceFilesystem.md  BlockDevicePartition.md  Child.md  CreateNexusBody.md  CreatePoolBody.md  CreateReplicaBody.md  CreateVolumeBody.md  ExplicitNodeTopology.md  ExplicitTopology.md  LabelledTopology.md  Nexus.md  NexusShareProtocol.md  NexusSpec.md  NexusSpecOperation.md  NexusState.md  Node.md  NodeSpec.md  NodeState.md  NodeStatus.md  NodeTopology.md  Pool.md  PoolSpec.md  PoolSpecOperation.md  PoolState.md  PoolStatus.md  PoolTopology.md  Protocol.md  Replica.md  ReplicaSpec.md  ReplicaSpecOwners.md  ReplicaState.md  ReplicaTopology.md  RestJsonError.md  SpecState.md  SpecStatus.md  Specs.md  Topology.md  Volume.md  VolumeHealPolicy.md  VolumePolicy.md  (+6 more)
openapi/src/: lib.rs
openapi/src/apis/: block_devices_api.rs  block_devices_api_client.rs  block_devices_api_handlers.rs  children_api.rs  children_api_client.rs  children_api_handlers.rs  client.rs  configuration.rs  json_grpc_api.rs  json_grpc_api_client.rs  json_grpc_api_handlers.rs  mod.rs  nexuses_api.rs  nexuses_api_client.rs  nexuses_api_handlers.rs  nodes_api.rs  nodes_api_client.rs  nodes_api_handlers.rs  pools_api.rs  pools_api_client.rs  pools_api_handlers.rs  replicas_api.rs  replicas_api_client.rs  replicas_api_handlers.rs  specs_api.rs  specs_api_client.rs  specs_api_handlers.rs  volumes_api.rs  volumes_api_client.rs  volumes_api_handlers.rs  watches_api.rs  watches_api_client.rs  watches_api_handlers.rs
openapi/src/models/: block_device.rs  block_device_filesystem.rs  block_device_partition.rs  child.rs  child_state.rs  create_nexus_body.rs  create_pool_body.rs  create_replica_body.rs  create_volume_body.rs  explicit_node_topology.rs  explicit_topology.rs  labelled_topology.rs  mod.rs  nexus.rs  nexus_share_protocol.rs  nexus_spec.rs  nexus_spec_operation.rs  nexus_state.rs  node.rs  node_spec.rs  node_state.rs  node_status.rs  node_topology.rs  pool.rs  pool_spec.rs  pool_state.rs  (+27 more)
rpc/: Cargo.toml  build.rs
rpc/src/: lib.rs
tests-mayastor/: Cargo.toml
tests-mayastor/src/: lib.rs
tests-mayastor/tests/: nexus.rs  pools.rs  replicas.rs
tests/io-engine/: Cargo.toml
tests/tests-mayastor/: Cargo.toml
utils/deployer-cluster/: Cargo.toml
utils/platform/: Cargo.toml
(+869 files in other folders)
