[patch.crates-io]
h2 = { path = "./utils/dependencies/h2" }

[profile.dev]
panic = "abort"

[workspace]
members = [
    "common",
    "control-plane/agents",
    "control-plane/rest",
    "control-plane/csi-driver",
    "control-plane/grpc",
    "control-plane/plugin",
    "k8s/operators",
    "k8s/plugin",
    ## Supportability tool to create bundle
    "k8s/supportability",
    "k8s/proxy",
    "deployer",
    "openapi",
    "rpc",
    "utils/utils-lib",
    "utils/pstor-usage",
    "utils/shutdown",
    "utils/dependencies/composer",
    "utils/dependencies/devinfo",
    "utils/dependencies/nvmeadm",
    "utils/dependencies/sysfs",
    "utils/dependencies/version-info",
    "utils/deployer-cluster",
    # Test io-engine through the rest api
    "tests/io-engine",
]
