[patch.crates-io]
h2 = { path = "./utils/dependencies/h2" }

[profile.dev]
panic = "abort"

[workspace]
members = [
    "control-plane/agents",
    "control-plane/rest",
    "control-plane/csi-driver",
    "control-plane/grpc",
    "control-plane/stor-port",
    "control-plane/plugin",
    "k8s/operators",
    "k8s/forward",
    "deployer",
    "openapi",
    "rpc",
    "utils/utils-lib",
    "utils/pstor",
    "utils/platform",
    "utils/pstor-usage",
    "utils/shutdown",
    "utils/deployer-cluster",
    "tests/io-engine",
]
exclude = [
    "utils/dependencies/*",
]
