[package]
name = "common-lib"
version = "1.0.0"
authors = ["paul <paul.yoong@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
strum = "0.21.0"
strum_macros = "0.21.1"
serde_json = "1.0.68"
percent-encoding = "2.1.0"
tokio = { version = "1.12.0", features = [ "full" ] }
snafu = "0.6.10"
etcd-client = "0.7.2"
serde = { version = "1.0.130", features = ["derive"] }
log = "0.4.14"
async-trait = "0.1.51"
dyn-clonable = "0.9.0"
openapi = { path = "../openapi", features = [ "actix-server", "tower-client", "tower-trace" ] }
parking_lot = "0.11.2"
rand = "0.8.4"
tonic = "0.5.2"
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
kube = { version = "0.74.0", features = ["derive"] }

# Tracing
tracing-subscriber = "0.2.24"
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
opentelemetry-semantic-conventions = "0.8.0"
tracing = "0.1.28"
