[package]
name = "common-lib"
version = "1.0.0"
authors = ["paul <paul.yoong@mayadata.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
strum = "0.21.0"
strum_macros = "0.21.1"
serde_json = "1.0.82"
percent-encoding = "2.1.0"
tokio = { version = "1.20.1", features = [ "full" ] }
snafu = "0.7.1"
etcd-client = "0.10.1"
serde = { version = "1.0.140", features = ["derive"] }
serde_tuple = "0.5.0"
async-trait = "0.1.51"
dyn-clonable = "0.9.0"
openapi = { path = "../openapi", features = [ "actix-server", "tower-client", "tower-trace" ] }
parking_lot = "0.12.1"
rand = "0.8.4"
tonic = "0.8.0"
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
kube = { version = "0.74.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }

# Tracing
tracing-subscriber = { version = "0.3.15", features = [ "env-filter" ] }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
tracing = "0.1.35"
