[package]
name = "composer"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
futures = "0.3.17"
tonic = "0.5.2"
crossbeam = "0.8.1"
rpc = { path = "../rpc"}
ipnetwork = "0.18.0"
bollard = "0.11.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
