[package]
name = "deployer"
description = "Deployer of control plane and data plane components"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deployer"
path = "bin/src/deployer.rs"

[lib]
name = "deployer_lib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../utils/dependencies/composer", default-features = false }
stor-port = { path = "../control-plane/stor-port" }
rpc = { path = "../rpc" }
utils = { path = "../utils/utils-lib" }
grpc = { path = "../control-plane/grpc" }
clap = { version = "4.1.4", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.8.3"
async-trait = "0.1.64"
strum = "0.24.1"
strum_macros = "0.24.3"
paste = "1.0.11"
humantime = "2.1.0"
reqwest = { version = "0.11.14", features = ["multipart"] }
futures = "0.3.26"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
