[package]
name = "deployer"
description = "Deployer of control plane and data plane components"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deployer"
path = "bin/src/deployer.rs"

[lib]
name = "deployer_lib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../utils/dependencies/composer", default-features = false }
stor-port = { path = "../control-plane/stor-port" }
rpc = { path = "../rpc" }
utils = { path = "../utils/utils-lib" }
grpc = { path = "../control-plane/grpc" }
clap = { version = "4.4.6", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
async-trait = "0.1.73"
strum = "0.25.0"
strum_macros = "0.25.2"
paste = "1.0.14"
humantime = "2.1.0"
reqwest = { version = "0.11.22", features = ["multipart"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
events-api = { path = "../utils/dependencies/events-api" }
