[package]
name = "kubectl-plugin"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "kubectl-mayastor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../openapi", features = [ "tower-client" ] }
tokio = { version = "1.12.0", features = [ "full" ] }
anyhow = "1.0.44"
async-trait = "0.1.51"
once_cell = "1.8.0"
structopt = "0.3.23"
yaml-rust = "0.4.5"
prettytable-rs = "0.8.0"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
