[package]
name = "kubectl-plugin"
description = "Kubectl Plugin"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "kubectl-mayastor"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "rls" ]
rls = [ "openapi/tower-client-rls" ]
tls = [ "openapi/tower-client-tls" ]

[dependencies]
openapi = { path = "../openapi", default-features = false, features = [ "tower-trace" ] }
tokio = { version = "1.12.0" }
anyhow = "1.0.44"
async-trait = "0.1.51"
once_cell = "1.8.0"
structopt = "0.3.23"
yaml-rust = "0.4.5"
prettytable-rs = "0.8.0"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.68"
serde_yaml = "0.8.21"
humantime = "2.1.0"
git-version = "0.3.5"
utils = { path = "../utils/utils-lib" }

# Tracing
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }

[dev-dependencies]
# Test dependencies
shutdown_hooks = "0.1.0"
ctrlp-tests = { path = "../tests/tests-mayastor" }
gag = "1.0.0"