[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[lib]
name = "openapi"
path = "src/lib.rs"

[[example]]
name = "tower-client"
path = "./examples/clients/tower/main.rs"
required-features = [ "tower-client", "tower-trace" ]

[features]
default = [ "tower-client-rls", "tower-trace" ]
actix-server = [ "actix" ]
actix-client = [ "actix", "awc" ]
actix = [ "actix-web", "actix-web-opentelemetry", "rustls" ]
tower-client-rls = [ "tower-client", "rustls_feat" ]
tower-client-tls = [ "tower-client", "hyper_tls_feat" ]
tower-client = [ "tower-hyper" ]
tower-hyper = [ "hyper", "tower", "tower-http", "bytes", "http-body", "futures", "pin-project", "tokio" ]
hyper_tls_feat = [ "hyper-tls", "tokio-native-tls" ]
rustls_feat = [ "rustls", "webpki", "hyper-rustls" ]
tower-trace = [ "opentelemetry-jaeger", "tracing-opentelemetry", "opentelemetry", "opentelemetry-http", "tracing", "tracing-subscriber", "opentelemetry-semantic-conventions" ]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = { version = "^2.2", features = ["serde"] }
async-trait = "0.1.42"
dyn-clonable = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_urlencoded = "0.7"

# actix dependencies
actix-web = { version = "4.0.0-beta.9", features = ["rustls"], optional = true }
actix-web-opentelemetry = { version = "0.11.0-beta.4", optional = true }
awc = { version = "3.0.0-beta.7", optional = true }

# tower and hyper dependencies
hyper = { version = "0.14.13", features = [ "client", "http1", "http2", "tcp", "stream" ], optional = true }
tower = { version = "0.4.13", features = [ "timeout", "util", "limit" ], optional = true }
tower-http = { version = "0.1.1", features = [ "trace", "map-response-body", "auth" ], optional = true }
bytes = {version = "1.1.0", optional = true }
tokio = { version = "1.12.0", features = ["full"], optional = true }
http-body = { version = "0.4.3", optional = true }
futures = { version = "0.3.17", optional = true }
pin-project = { version = "1.0.8", optional = true }
# SSL
rustls = { version = "0.19.1", optional = true, features = [ "dangerous_configuration" ] }
webpki = { version = "0.21.4", optional = true }
hyper-rustls = { version = "0.22.1", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
# tracing and telemetry
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"], optional = true  }
tracing-opentelemetry = { version = "0.15.0", optional = true }
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"], optional = true }
opentelemetry-http = { version = "0.5.0", optional = true }
tracing = { version = "0.1.28", optional = true }
tracing-subscriber = { version = "0.2.24", optional = true }
opentelemetry-semantic-conventions = { version = "0.8.0", optional = true }