[package]
name = "rpc"
version = "1.0.0"
authors = ["Jeffry Molanus <jeffry.molanus@gmail.com>"]
edition = "2018"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.9"

[dependencies]
tonic = "0.8.3"
bytes = "1.5.0"
prost = "0.11.9"
prost-derive = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
strum = "0.24.1"
strum_macros = "0.24.3"
