[package]
name = "rpc"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[dependencies]
tonic = "0.10.2"
bytes = "1.5.0"
prost = "0.12.1"
prost-derive = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
strum = "0.25.0"
strum_macros = "0.25.2"
