[package]
name = "ctrlp-tests"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"
description = "Control Plane 'Compose' Tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testlib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../composer" }
deployer = { path = "../deployer" }
rest = { path = "../control-plane/rest" }
actix-rt = "2.2.0"
opentelemetry-jaeger = { version = "0.14", features = ["tokio"] }
tracing-opentelemetry = "0.13.0"
opentelemetry = "0.15.0"
actix-web-opentelemetry = { git = "https://github.com/fourbs-net/actix-web-opentelemetry" }
tracing = "0.1"
anyhow = "1.0.32"
common-lib = { path = "../common" }