[package]
name = "agents"
description = "Control plane agent"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2021"

[lib]
name = "agents"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/bin/core/main.rs"

[[test]]
name = "core"
path = "src/bin/core/tests/test.rs"

[[bin]]
name = "jsongrpc"
path = "src/bin/jsongrpc/main.rs"

[[bin]]
 name = "agent-ha-node"
 path = "src/bin/ha/node/main.rs"

[[bin]]
 name = "agent-ha-cluster"
 path = "src/bin/ha/cluster/main.rs"

[dependencies]
anyhow = "1.0.69"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.8.3"
futures = "0.3.26"
serde_json = "1.0.93"
async-trait = "0.1.64"
dyn-clonable = "0.9.0"
snafu = "0.7.4"
humantime = "2.1.0"
state = "0.5.3"
http = "0.2.8"
reqwest = "0.11.14"
parking_lot = "0.12.1"
itertools = "0.10.5"
once_cell = "1.17.0"
indexmap = "1.9.2"
futures-util = { version = "0.3.26" }
crossbeam-queue = "0.3.8"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.24", features = [ "client", "http1", "http2", "tcp", "stream" ] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
tracing = "0.1.37"

grpc = { path = "../grpc" }
shutdown = { path = "../../utils/shutdown" }
rpc =  { path = "../../rpc"}
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
weighted-scoring = { path = "../../utils/weighted-scoring" }

[target.'cfg(target_os="linux")'.dependencies]
tokio-udev = { version = "0.8.0" }

[dev-dependencies]
deployer-cluster = { path = "../../utils/deployer-cluster" }
url = "2.3.1"
once_cell = "1.17.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.152"
