[package]
name = "agents"
description = "Control plane agent"
version = "1.0.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2021"

[lib]
name = "agents"
path = "src/lib.rs"

[[bin]]
name = "core"
path = "src/bin/core/main.rs"

[[test]]
name = "core"
path = "src/bin/core/tests/test.rs"

[[bin]]
name = "jsongrpc"
path = "src/bin/jsongrpc/main.rs"

[[bin]]
 name = "agent-ha-node"
 path = "src/bin/ha/node/main.rs"

[[bin]]
 name = "agent-ha-cluster"
 path = "src/bin/ha/cluster/main.rs"

[dependencies]
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["color", "derive", "env", "string"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
futures = "0.3.28"
serde_json = "1.0.107"
async-trait = "0.1.73"
dyn-clonable = "0.9.0"
snafu = "0.7.5"
humantime = "2.1.0"
state = "0.6.0"
http = "0.2.9"
reqwest = "0.11.22"
parking_lot = "0.12.1"
itertools = "0.11.0"
once_cell = "1.18.0"
indexmap = "2.0.2"
futures-util = { version = "0.3.28" }
crossbeam-queue = "0.3.8"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
hyper = { version = "0.14.27", features = [ "client", "http1", "http2", "tcp", "stream" ] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
tracing = "0.1.37"
nix = { version = "0.27.1", default-features = false }
prost-types = "0.11.9"
url = "2.4.1"

grpc = { path = "../grpc" }
shutdown = { path = "../../utils/shutdown" }
rpc =  { path = "../../rpc"}
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
weighted-scoring = { path = "../../utils/weighted-scoring" }

[target.'cfg(target_os="linux")'.dependencies]
tokio-udev = { version = "0.9.1" }

[dev-dependencies]
deployer-cluster = { path = "../../utils/deployer-cluster" }
events-api = { path = "../../utils/dependencies/events-api" }
url = "2.4.1"
once_cell = "1.18.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.188"
