[package]
name = "csi-controller"
version = "0.1.0"
authors = ["Mikhail Tcymbaliuk <m.tcymbaliuk@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-stream = "0.3.2"
common-lib = { path = "../../common" }
env_logger = "0.9.0"
futures = { version = "0.3.16", default-features = false }
git-version = "0.3.4"
log = "0.4.14"
once_cell = "1.8.0"
regex = "1.5.4"
rpc = { path = "../../rpc"}
rest = { path = "../rest" }
reqwest = { version="0.11.4", features=["json"] }
serde_json = "1.0.66"
structopt = "0.3.11"
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = "0.5.2"
tracing = "0.1.26"
uuid = "0.8.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.127"
