[package]
name = "csi-controller"
version = "1.0.0"
authors = ["Mikhail Tcymbaliuk <m.tcymbaliuk@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-stream = "0.3.2"
common-lib = { path = "../../common" }
futures = { version = "0.3.17", default-features = false }
humantime = "2.1.0"
once_cell = "1.8.0"
regex = "1.5.4"
rpc = { path = "../../rpc"}
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tonic = "0.5.2"
clap = "2.33.3"
uuid = "0.8.2"
utils = { path = "../../utils" }


# Tracing
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio-current-thread"] }

[dependencies.serde]
features = ["derive"]
version = "1.0.130"
