[package]
name = "csi-driver"
description = "CSI Driver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "csi-controller"
path = "src/bin/controller/main.rs"

[[bin]]
name = "csi-node"
path = "src/bin/node/main.rs"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.6"

[dependencies]
prost = "0.11.6"
prost-derive = "0.11.6"
prost-types = "0.11.6"
tonic = "0.8.3"

anyhow = "1.0.69"
async-stream = "0.3.3"
futures = { version = "0.3.26", default-features = false }
humantime = "2.1.0"
once_cell = "1.17.0"
regex = "1.7.1"
rpc = { path = "../../rpc" }
grpc = { path = "../grpc" }
tokio = { version = "1.25.0", features = ["full"] }
clap = "2.34.0"
nix = "0.22.3"
strum = "0.21.0"
strum_macros = "0.21.1"
heck = "0.4.1"

# Tracing
tracing = "0.1.37"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
glob = "0.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.93"
snafu = "0.7.4"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
url = "2.3.1"
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.4.0"
k8s-openapi = { version = "0.15.0", features = ["v1_20"] }
kube = { version = "0.74.0", features = ["runtime", "derive"] }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
sysfs = { path = "../../utils/dependencies/sysfs" }
common-lib = { path = "../../common" }
utils = { path = "../../utils/utils-lib" }
shutdown = { path = "../../utils/shutdown" }

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.6.3"
devinfo = { path = "../../utils/dependencies/devinfo" }
sys-mount = { version = "1.5.1", default-features = false }
