[package]
name = "csi-driver"
description = "CSI Driver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "csi-controller"
path = "src/bin/controller/main.rs"

[[bin]]
name = "csi-node"
path = "src/bin/node/main.rs"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.9"

[dependencies]
prost = "0.11.9"
prost-derive = "0.11.9"
prost-types = "0.11.9"
tonic = "0.8.3"

anyhow = "1.0.75"
async-stream = "0.3.5"
futures = { version = "0.3.28", default-features = false }
humantime = "2.1.0"
once_cell = "1.18.0"
regex = "1.9.6"
rpc = { path = "../../rpc" }
grpc = { path = "../grpc" }
tokio = { version = "1.32.0", features = ["full"] }
clap =  { version = "4.4.6", features = ["color", "env", "string"] }
nix = { version = "0.27.1", default-features = false, features = [ "ioctl", "fs" ] }
strum = "0.24.1"
strum_macros = "0.24.3"
heck = "0.4.1"
tracing = "0.1.37"
glob = "0.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.107"
snafu = "0.7.5"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }
which = "4.4.2"
k8s-openapi = { version = "0.17.0", features = ["v1_20"] }
kube = { version = "0.78.0", features = ["runtime", "derive"] }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
sysfs = { path = "../../utils/dependencies/sysfs" }
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
shutdown = { path = "../../utils/shutdown" }

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.7.0"
devinfo = { path = "../../utils/dependencies/devinfo" }
sys-mount = { version = "1.5.1", default-features = false }
#sys-mount = { version = "2.0.2", default-features = false }
