[package]
name = "csi-driver"
description = "CSI Driver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "csi-controller"
path = "src/bin/controller/main.rs"

[[bin]]
name = "csi-node"
path = "src/bin/node/main.rs"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[dependencies]
prost = "0.12.1"
prost-derive = "0.12.1"
prost-types = "0.12.1"
tonic = "0.10.2"

anyhow = "1.0.75"
async-stream = "0.3.5"
futures = { version = "0.3.28", default-features = false }
humantime = "2.1.0"
once_cell = "1.18.0"
regex = "1.9.6"
rpc = { path = "../../rpc" }
grpc = { path = "../grpc" }
tokio = { version = "1.32.0", features = ["full"] }
clap =  { version = "4.4.6", features = ["color", "env", "string"] }
nix = { version = "0.27.1", default-features = false, features = [ "ioctl", "fs" ] }
strum = "0.25.0"
strum_macros = "0.25.2"
heck = "0.4.1"
tracing = "0.1.37"
glob = "0.3.1"
lazy_static = "1.4.0"
serde_json = "1.0.107"
snafu = "0.7.5"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4"] }
which = "4.4.2"
k8s-openapi = { version = "0.19.0", features = ["v1_25"] }
kube = { version = "0.85.0", features = ["runtime", "derive"] }
nvmeadm = { path = "../../utils/dependencies/nvmeadm" }
sysfs = { path = "../../utils/dependencies/sysfs" }
stor-port = { path = "../stor-port" }
utils = { path = "../../utils/utils-lib" }
shutdown = { path = "../../utils/shutdown" }

[target.'cfg(target_os="linux")'.dependencies]
udev = "0.8.0"
devinfo = { path = "../../utils/dependencies/devinfo" }
sys-mount = { version = "2.1.0", default-features = false }
