[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
authors = ["Abhinandan Purkait <abhinandan.purkait@mayadata.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grpc"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.6"

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11.6"

tokio = { version = "1.25.0", features = ["full"] }
common-lib = { path = "../../common" }
humantime = "2.1.0"
utils = { path = "../../utils/utils-lib" }
rpc = { path = "../../rpc"}
uuid = { version = "0.8.2", features = ["v4"] }

# Tracing
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-http = { version = "0.6.0" }
opentelemetry-semantic-conventions = "0.9.0"
tracing = "0.1.37"
http-body = "0.4.5"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
serde_json = "1.0.93"

[dev-dependencies]
once_cell = "1.17.0"
