[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
authors = ["Abhinandan Purkait <abhinandan.purkait@mayadata.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grpc"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.6"

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11.6"

tokio = { version = "1.25.0", features = ["full"] }
stor-port = { path = "../stor-port" }
humantime = "2.1.0"
utils = { path = "../../utils/utils-lib" }
rpc = { path = "../../rpc"}
uuid = { version = "1.3.0", features = ["v4"] }
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-http = { version = "0.7.0" }
opentelemetry-semantic-conventions = "0.10.0"
tracing = "0.1.37"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
serde_json = "1.0.93"
events-api = { path = "../../utils/dependencies/events-api" }

[dev-dependencies]
once_cell = "1.17.0"
