[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
authors = ["Abhinandan Purkait <abhinandan.purkait@mayadata.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grpc"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"

tokio = { version = "1.32.0", features = ["full"] }
stor-port = { path = "../stor-port" }
humantime = "2.1.0"
utils = { path = "../../utils/utils-lib" }
rpc = { path = "../../rpc"}
uuid = { version = "1.4.1", features = ["v4"] }
tracing-opentelemetry = "0.21.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio-current-thread"] }
opentelemetry-http = { version = "0.9.0" }
opentelemetry-semantic-conventions = "0.12.0"
tracing = "0.1.37"
tower = { version = "0.4.13", features = [ "timeout", "util" ] }
serde_json = "1.0.107"
events-api = { path = "../../utils/dependencies/apis/events" }

[dev-dependencies]
once_cell = "1.18.0"
